# RayTracer

./: CMakeLists.txt  README.txt
src/: Camera.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  config.hpp  ray_tracer.cpp
